--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@ html {
 }
 
 h2,
-h3,
-h4,
 .nav-item,
 #transition,
 footer {
@@ -30,6 +28,9 @@ h1.toto {
     padding: 200px 0 100px 20%;
     text-shadow: -6px 6px 4px #855a85;
     background-color: rgb(224, 218, 218);
+    border-style: solid;
+    border-width: 3px;
+    border-color: #855a85;
 }
 
 footer {
@@ -37,6 +38,17 @@ footer {
     background-color: #855a85;
     margin-top: 0px;
     color: white;    
+}
+
+.space {
+    padding: 50px 0 50px 0;
+}
+
+.side {
+    background-color: rgb(224, 218, 218);
+    border-style: solid;
+    border-width: 3px;
+    border-color: #855a85;
 }
 
 ul.bozzo {
