--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ footer {
     padding: 50px 0 50px 0;
 }
 
+/* section droite */
 .side {
     background-color: rgb(224, 218, 218);
     border-style: solid;
